# wolfram-cli

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
Tests/: ClapArgumentParsing.wlt
WolframCLI/: PacletInfo.wl
WolframCLI/Source/: ErrorUtils.wl  TerminalForm.wl  WolframCLI.wl
WolframCLI/Source/ClapLink/: ClapLink.wl
WolframCLI/Source/WolframCLI/: ErrorUtils.wl  Errors.wl  TerminalForm.wl  WolframCLI.wl
crates/clap-link/: Cargo.toml
crates/clap-link/src/: from_expr.rs  lib.rs
crates/wolfram-cli/: Cargo.toml
crates/wolfram-cli/src/: config.rs  kernel.rs  main.rs
docs/: CommandLineHelp.md  Development.md  Maintenance.md
examples/: greeting.wls
examples/TravelDirectionsCLI/: PacletInfo.wl
examples/TravelDirectionsCLI/Source/: TravelDirectionsCLI.wl
scripts/: install-paclet.wls
src/: kernel.rs  main.rs  print_all_help.rs
