[package]
name = "wolfram-cli"
version = "0.1.0"
edition = "2021"
authors = ["Connor Gray <code@connorgray.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }

wolfram-app-discovery = "0.3.0"
wstp = "0.2.4"